force-app/main/default/objects/HDT_SegnalazioniAmbientali__mdt/HDT_SegnalazioniAmbientali__mdt.object-meta.xml
<CustomObject>
    <label>HDT_SegnalazioniAmbientali</label>
    <pluralLabel>HDT_SegnalazioniAmbientali</pluralLabel>
</CustomObject>