force-app/main/default/objects/HDT_SegnalazioniAmbientali__mdt/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Materiale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABITI USATI</fullName>
                <label>Abiti usati</label>
            </value>
            <value>
                <fullName>AMIANTO</fullName>
                <label>Amianto</label>
            </value>
            <value>
                <fullName>AMIANTO/ETHERNIT</fullName>
                <label>Amianto/Ethernit</label>
            </value>
            <value>
                <fullName>ANIMALI D&apos;AFFEZIONE</fullName>
                <label>Animali d&apos;affezione</label>
            </value>
            <value>
                <fullName>BUCHE SU STRADA</fullName>
                <label>Buche su strada</label>
            </value>
            <value>
                <fullName>CADUTA CALCINACCI</fullName>
                <label>Caduta calcinacci</label>
            </value>
            <value>
                <fullName>CARCASSE ANIMALI</fullName>
                <label>Carcasse animali</label>
            </value>
            <value>
                <fullName>CARTA</fullName>
                <label>Carta</label>
            </value>
            <value>
                <fullName>CARTA/CARTONE</fullName>
                <label>Carta/Cartone</label>
            </value>
            <value>
                <fullName>CARTONE_SOLOAZIENDE</fullName>
                <label>Cartone_soloAziende</label>
            </value>
            <value>
                <fullName>CESTINI</fullName>
                <label>cestini</label>
            </value>
            <value>
                <fullName>CON RIMOZIONE</fullName>
                <label>Con rimozione</label>
            </value>
            <value>
                <fullName>DISTANZACASSONDADOMICILIOUT</fullName>
                <label>DistanzaCassonDaDomicilioUT</label>
            </value>
            <value>
                <fullName>ECOSELF (CARTA E PLASTICA)</fullName>
                <label>ECOSELF (carta e plastica)</label>
            </value>
            <value>
                <fullName>FANGOSI NON PERICOLOSI</fullName>
                <label>Fangosi non pericolosi</label>
            </value>
            <value>
                <fullName>FANGOSI PERICOLOSI</fullName>
                <label>Fangosi pericolosi</label>
            </value>
            <value>
                <fullName>FARMACI</fullName>
                <label>Farmaci</label>
            </value>
            <value>
                <fullName>FITOFARMACI</fullName>
            </value>
            <value>
                <fullName>INGOMBRANTI</fullName>
                <label>Ingombranti</label>
            </value>
            <value>
                <fullName>INGOMBRANTI+RAEE</fullName>
                <label>Ingombranti+Raee</label>
            </value>
            <value>
                <fullName>LATTINE</fullName>
                <label>Lattine</label>
            </value>
            <value>
                <fullName>LAVAGGIO/PULIZIA SEDE STRADALE</fullName>
                <label>Lavaggio/pulizia sede stradale</label>
            </value>
            <value>
                <fullName>LEGNO</fullName>
            </value>
            <value>
                <fullName>LEGNO_SOLOAZIENDE</fullName>
                <label>Legno_soloAziende</label>
            </value>
            <value>
                <fullName>LIQUIDI NON PERICOLOSI</fullName>
                <label>Liquidi non pericolosi</label>
            </value>
            <value>
                <fullName>LIQUIDI PERICOLOSI</fullName>
                <label>Liquidi pericolosi</label>
            </value>
            <value>
                <fullName>MACERIE</fullName>
                <label>Macerie</label>
            </value>
            <value>
                <fullName>MARCIAPIEDE</fullName>
                <label>Marciapiede</label>
            </value>
            <value>
                <fullName>MULTIMATERIALE</fullName>
                <label>Multimateriale</label>
            </value>
            <value>
                <fullName>NESSUN MATERIALE</fullName>
                <label>Nessun materiale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>