force-app/main/default/objects/HDT_SegnalazioniAmbientali__mdt/fields/TypeOperation__c.field-meta.xml
<CustomField>
    <fullName>TypeOperation__c</fullName>
    <label>Tipo Intervento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CONSEGNA KIT PANNOLINI ECO</fullName><default>true</default><label>CONSEGNA KIT PANNOLINI ECO</label></value>
            <value><fullName>DISMISSIONE COMPOSTIERA</fullName><default>false</default><label>DISMISSIONE COMPOSTIERA</label></value>
            <value><fullName>LAMENTELE COMPORTAM OPERATORE</fullName><default>false</default><label>LAMENTELE COMPORTAM OPERATORE</label></value>
            <value><fullName>ODORI MEZZI/DOTAZIONE/IMPIANTI</fullName><default>false</default><label>ODORI MEZZI/DOTAZIONE/IMPIANTI</label></value>
            <value><fullName>RUMORI DI MEZZI/IMPIANTI</fullName><default>false</default><label>RUMORI DI MEZZI/IMPIANTI</label></value>
            <value><fullName>CONSEGNA PANNOLINI</fullName><default>false</default><label>CONSEGNA PANNOLINI</label></value>
            <value><fullName>RICH. VERIFICA SCONTI RACC.DIF</fullName><default>false</default><label>RICH. VERIFICA SCONTI RACC.DIF</label></value>
            <value><fullName>RICHIESTA INFORMAZIONI</fullName><default>false</default><label>RICHIESTA INFORMAZIONI</label></value>
            <value><fullName>RICHIESTA INFORMAZIONI PAP</fullName><default>false</default><label>RICHIESTA INFORMAZIONI PAP</label></value>
            <value><fullName>SEGNALAZ COMPORTAMEN CITTADINI</fullName><default>false</default><label>SEGNALAZ COMPORTAMEN CITTADINI</label></value>
            <value><fullName>SOLLEC RITIROGRATUITO CONAPP</fullName><default>false</default><label>SOLLEC RITIROGRATUITO CONAPP</label></value>
            <value><fullName>SOLLEC RITIROGRATUITO SENZAAPP</fullName><default>false</default><label>SOLLEC RITIROGRATUITO SENZAAPP</label></value>
            <value><fullName>VERIFICA TARIFFA</fullName><default>false</default><label>VERIFICA TARIFFA</label></value>
            <value><fullName>CIMITERIALI</fullName><default>false</default><label>CIMITERIALI</label></value>
            <value><fullName>CONSEGNA/RITIRO TUTTI I CONTEN</fullName><default>false</default><label>CONSEGNA/RITIRO TUTTI I CONTEN</label></value>
            <value><fullName>RICHIESTA CONTENITORE</fullName><default>false</default><label>RICHIESTA CONTENITORE</label></value>
            <value><fullName>RIMOZIONE CONTENITORE</fullName><default>false</default><label>RIMOZIONE CONTENITORE</label></value>
            <value><fullName>SOSTITUZIONE CONTENITORE</fullName><default>false</default><label>SOSTITUZIONE CONTENITORE</label></value>
            <value><fullName>CANCELLAZIONE SCRITTE MURARIE</fullName><default>false</default><label>CANCELLAZIONE SCRITTE MURARIE</label></value>
            <value><fullName>LAVAGGIO PORTICI</fullName><default>false</default><label>LAVAGGIO PORTICI</label></value>
            <value><fullName>PRELIEVO CARCASSE ANIMALI</fullName><default>false</default><label>PRELIEVO CARCASSE ANIMALI</label></value>
            <value><fullName>PRONTO INTERVENTO</fullName><default>false</default><label>PRONTO INTERVENTO</label></value>
            <value><fullName>PULIZIA ARENILE</fullName><default>false</default><label>PULIZIA ARENILE</label></value>
            <value><fullName>PULIZIA CADITOIE</fullName><default>false</default><label>PULIZIA CADITOIE</label></value>
            <value><fullName>PULIZIA GIARDINI</fullName><default>false</default><label>PULIZIA GIARDINI</label></value>
            <value><fullName>PULIZIA SUOLO PUBBLICO</fullName><default>false</default><label>PULIZIA SUOLO PUBBLICO</label></value>
            <value><fullName>RACCOLTA SIRINGHE</fullName><default>false</default><label>RACCOLTA SIRINGHE</label></value>
            <value><fullName>SERVIZI A FESTE E MANIFESTAZ</fullName><default>false</default><label>SERVIZI A FESTE E MANIFESTAZ</label></value>
            <value><fullName>SERVIZI DEIEZIONI CANINE</fullName><default>false</default><label>SERVIZI DEIEZIONI CANINE</label></value>
            <value><fullName>SERVIZIO BORA</fullName><default>false</default><label>SERVIZIO BORA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>